# Courses

.github/instructions/: memory-bank.instructions.md
Agents/: client.py  math_server_stdio.py  pyproject.toml  sofia_server_sse.py  variables.py  weather_server_sse.py
Agents/tools/: __init__.py
Agents/tools/sofia/: tools.py
Agents/tools/sofia/tables/: table.py
Agents/tools/tasks/: load_local_data.py
Neo4j/: crime.cypher  family.cypher
Pytorch/: requirements.txt
Pytorch/chapter_1_basics/: cifar_classification_cnn.ipynb  feedforward_regression.ipynb  improved_cifar_classification_cnn.ipynb  linear_classification.ipynb  linear_classification_with_logits.ipynb  linear_classifier.pt  linear_regression.ipynb  moorelaw.ipynb  number_classification.ipynb
Pytorch/chapter_2_sequences/: RNN_MNIST_classification_cnn.ipynb  Text_classification_with_CNN.ipynb  Text_classification_with_LSTM.ipynb  lstm.ipynb  rnn.ipynb  sequence.ipynb
Pytorch/chapter_3_uses/: GAN.ipynb  Movie_Recommender.ipynb  Transfer_Learning.ipynb  Transfer_Learning_V2.ipynb
Rust/deck/src/: main.rs
memory-bank/: 00-project-overview.md  01-architecture.md  02-components.md  03-development-process.md  04-api-documentation.md  05-progress-log.md
