[project]
name = "agents"
version = "0.1.0"
description = "Prototype MCP server based in Sofia Tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-groq>=0.3.2",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=0.5.0",
    "mcp>=1.9.4",
    "langchain-openai==0.3.12",
    "openai==1.70.0",
    "psycopg2-binary==2.9.9",
    "pgvector==0.2.5",
    "asyncpg==0.29.0",
    "SQLAlchemy==2.0.29",
    "pandas==2.2.3",
    "geopy==2.4.1",
    "googlemaps==4.10.0"
]
